# lammpsParser

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
include/: lammps_parser.h
src/: bindings.cpp  lammps_parser.cpp
src/lammpsParser/: __init__.py  bindings.cpp
src_cpp/: bindings.cpp  lammps_parser.cpp
tests/: test_basic.py
