[build-system]
requires = [
  "scikit-build-core>=0.8.0",
  "cmake>=3.18",
  "pybind11>=2.10",
  "setuptools>=61.0",
  "wheel",
  "numpy"
]
build-backend = "scikit_build_core.build"

[project]
name = "lammpsParser"
version = "0.1.0"
description = "LAMMPS dump parser (C++/pybind11) with NumPy API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Jon Aronoff", email = "jon.aronoff14@gmail.com" }
]
license = { text = "MIT" }
dependencies = ["numpy"]
keywords = ["lammps","parser","pybind11","numpy"]
